[DDW-421]: Update stake pool tooltip

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -378,104 +378,185 @@
 
 .table {
   @extend %regularText;
-  display: flex;
-  flex-wrap: wrap;
   margin: 18px 0 6px 0;
 
-  dt,
-  dd {
-    height: 19px;
-    margin-bottom: 6px;
-
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-  }
-
-  dt {
+  .dRow {
     align-items: center;
-    color: var(--theme-staking-stake-pool-tooltip-table-title-color);
     display: flex;
-    font-size: 14px;
-    line-height: 1.36;
-    width: 65%;
+    justify-content: space-between;
 
     &:hover {
-      .questionMark {
-        display: block;
+      & > div:first-child {
+        .questionMark {
+          display: block;
+        }
       }
     }
 
-    .fieldLabel {
-      opacity: 0.8;
+    & > div {
+      height: 19px;
+      margin-bottom: 6px;
     }
 
-    .questionMark {
-      cursor: pointer;
-      display: none;
-      height: 10px;
-      margin-left: 4px;
-      margin-top: 4px;
-      width: 10px;
+    & > div:first-child {
+      align-items: center;
+      color: var(--theme-staking-stake-pool-tooltip-table-title-color);
+      display: flex;
+      font-size: 14px;
+      line-height: 1.36;
+      width: 65%;
 
-      :global {
-        .SVGInline {
-          display: block;
-          height: 100%;
-          line-height: 10px;
-          width: 100%;
-
-          svg {
-            height: 100%;
-            width: 100%;
-
-            path {
-              fill: var(--theme-staking-stake-pool-tooltip-table-title-color);
-              opacity: 0.3;
-            }
-
-            &:hover {
-              path {
-                opacity: 0.5;
+      &:hover {
+        .questionMark {
+          :global {
+            .SVGInline {
+              svg {
+                path {
+                  opacity: 0.5;
+                }
               }
             }
           }
         }
       }
-    }
 
-    :global {
-      .SimpleTooltip_root {
-        .SimpleBubble_bubble {
-          white-space: normal;
-          width: 300px;
+      &.saturationLabel {
+        width: 50%;
+      }
+
+      &.costLabel {
+        width: 75%;
+      }
+
+      .labelContainer {
+        align-items: center;
+        display: flex;
+      }
+
+      .fieldLabel {
+        line-height: 1;
+        opacity: 0.8;
+      }
+
+      .questionMark {
+        cursor: pointer;
+        display: none;
+        height: 19px;
+        margin-left: 4px;
+        width: 10px;
+
+        :global {
+          .SVGInline {
+            align-items: center;
+            display: flex;
+            height: 100%;
+            justify-content: center;
+            line-height: 19px;
+            width: 100%;
+
+            svg {
+              height: 10px;
+              width: 10px;
+
+              path {
+                fill: var(--theme-staking-stake-pool-tooltip-table-title-color);
+                opacity: 0.3;
+              }
+            }
+          }
+        }
+      }
+
+      :global {
+        .SimpleTooltip_root {
+          .SimpleBubble_bubble {
+            font-family: var(--font-regular);
+            margin-left: 40px;
+            transform: translate(-50%, 0);
+            white-space: normal;
+            width: 250px;
+          }
         }
       }
     }
-  }
 
-  dd {
-    line-height: 0;
-    padding-top: 1px;
-    text-align: right;
-    width: 35%;
+    & > div:last-child {
+      line-height: 0;
+      padding-top: 1px;
+      text-align: right;
+      width: 35%;
 
-    span {
-      border-radius: 3px;
-      color: var(--theme-staking-stake-pool-tooltip-table-param-color);
-      display: inline-block;
-      font-size: 8px;
-      font-weight: bold;
-      height: 16px;
-      line-height: 16px;
-      padding: 0 9px;
+      &.costValue {
+        width: 25%;
+      }
+
+      span {
+        border-radius: 3px;
+        color: var(--theme-staking-stake-pool-tooltip-table-param-color);
+        display: inline-block;
+        font-size: 8px;
+        font-weight: bold;
+        height: 16px;
+        line-height: 16px;
+        padding: 0 9px;
+      }
+
+      &.saturationValue {
+        width: 50% !important;
+
+        & > span {
+          background: var(
+            --theme-staking-stake-pool-tooltip-neutral-background-color
+          );
+          white-space: nowrap;
+
+          .saturationBar {
+            background: var(
+              --theme-staking-stake-pool-saturation-background-color
+            );
+            border-radius: 2px;
+            height: 5px;
+            margin: 0 6px 0 0;
+            overflow: hidden;
+            padding: 0;
+            position: relative;
+            width: 40px;
+
+            span {
+              border-radius: 2px;
+              bottom: 0;
+              height: inherit;
+              left: 0;
+              padding: 0;
+              position: absolute;
+              top: 0;
+            }
+
+            &.green span {
+              background: var(
+                --theme-staking-stake-pool-saturation-green-color
+              );
+            }
+
+            &.orange span {
+              background: var(
+                --theme-staking-stake-pool-saturation-orange-color
+              );
+            }
+
+            &.red span {
+              background: var(--theme-staking-stake-pool-saturation-red-color);
+            }
+
+            &.yellow span {
+              background: var(
+                --theme-staking-stake-pool-saturation-yellow-color
+              );
+            }
+          }
+        }
+      }
     }
-  }
-
-  .ranking,
-  .profitMargin,
-  .cost {
-    width: 35%;
   }
 
   .ranking {
@@ -489,57 +570,5 @@
       --theme-staking-stake-pool-tooltip-neutral-background-color
     );
     color: var(--theme-staking-stake-pool-tooltip-neutral-text-color);
-  }
-}
-
-.saturationLabel {
-  width: 50% !important;
-}
-
-.saturationValue {
-  width: 50% !important;
-
-  & > span {
-    background: var(
-      --theme-staking-stake-pool-tooltip-neutral-background-color
-    );
-    white-space: nowrap;
-  }
-
-  .saturationBar {
-    background: var(--theme-staking-stake-pool-saturation-background-color);
-    border-radius: 2px;
-    height: 5px;
-    margin: 0 6px 0 0;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
-    width: 40px;
-
-    span {
-      border-radius: 2px;
-      bottom: 0;
-      height: inherit;
-      left: 0;
-      padding: 0;
-      position: absolute;
-      top: 0;
-    }
-
-    &.green span {
-      background: var(--theme-staking-stake-pool-saturation-green-color);
-    }
-
-    &.orange span {
-      background: var(--theme-staking-stake-pool-saturation-orange-color);
-    }
-
-    &.red span {
-      background: var(--theme-staking-stake-pool-saturation-red-color);
-    }
-
-    &.yellow span {
-      background: var(--theme-staking-stake-pool-saturation-yellow-color);
-    }
   }
 }
