[DDW-16] Change the Saturation to be fluid

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -1,16 +1,6 @@
 @import '../../../themes/mixins/link';
 @import '../../../themes/mixins/loading-spinner';
 
-%progressLabelText {
-  font-family: var(--font-medium);
-  font-size: 12px;
-  left: 60px;
-  line-height: 24px;
-  position: absolute;
-  top: -10px;
-  white-space: nowrap;
-}
-
 .component {
   .headerWrapper {
     align-items: flex-end;
@@ -274,25 +264,36 @@
         }
       }
 
-      .currentEpochProgressBar {
-        height: 5px;
-        margin: 5px 0;
-        width: 50px;
+      .saturation {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+      }
+
+      %saturationContainer {
+        display: flex;
+        height: 100%;
+      }
+
+      .progressBar {
+        @extend %saturationContainer;
+        flex: 0.7;
       }
 
       .progressBarContainer {
+        align-self: center;
         background-color: var(--theme-staking-progress-bar-background-color);
         border-radius: 5px;
         display: flex;
         height: 100%;
+        height: 5px;
         position: relative;
         top: -1px;
         width: 100%;
       }
 
-      .progress {
+      .progressBarContent {
         border-radius: 5px;
-        height: 100%;
         overflow: hidden;
         position: relative;
 
@@ -313,18 +314,16 @@
         }
       }
 
-      .overlapProgressLabel {
-        color: var(--theme-staking-content-background-color);
-        transform: translateX(calc(-100% - 8px));
-        z-index: 98;
-        @extend %progressLabelText;
-      }
-
-      .progressLabel {
+      .saturationLabel {
+        @extend %saturationContainer;
         color: var(--theme-staking-font-color-regular);
+        flex: 0.3;
+        font-family: var(--font-medium);
+        font-size: 12px;
+        line-height: 24px;
+        padding-left: 12px;
         right: 8px;
-        z-index: 97;
-        @extend %progressLabelText;
+        white-space: nowrap;
       }
 
       .syncingProgress {
