[DDW-16] Fixes slider wallet dropdown styles

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
@@ -84,6 +84,8 @@
             min-width: 250px;
 
             .SimpleOptions_option {
+              padding: 8px 20px;
+
               span {
                 display: block;
                 overflow: hidden;
