[DDW-16] Fix saturation bar sizing

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -268,7 +268,6 @@
         display: flex;
         flex-direction: row;
         height: 100%;
-        justify-content: space-between;
       }
 
       %saturationContainer {
@@ -278,7 +277,7 @@
 
       .progressBar {
         @extend %saturationContainer;
-        min-width: 42%;
+        flex: 1;
         padding-top: 2px;
       }
 
@@ -287,7 +286,6 @@
         background-color: var(--theme-staking-progress-bar-background-color);
         border-radius: 5px;
         display: flex;
-        height: 100%;
         height: 5px;
         position: relative;
         top: -1px;
@@ -319,10 +317,12 @@
       .saturationLabel {
         @extend %saturationContainer;
         color: var(--theme-staking-font-color-regular);
+        display: block;
         font-family: var(--font-medium);
         font-size: 12px;
-        padding-left: 6px;
+        text-align: right;
         white-space: nowrap;
+        width: 60px;
       }
 
       .syncingProgress {
@@ -388,12 +388,6 @@
       }
       &:nth-child(9) {
         width: 12%;
-      }
-    }
-
-    @media (min-width: 1100px) {
-      td:nth-child(3) {
-        width: 8%;
       }
     }
   }
