[DDW-16] Table view for stake pools (#2186)
* DDW-16 Table comparison view for stake pools

* DDW-16 Table comparison view for stake pools

* DDW-16 Table comparison view for stake pools - adding table styling

* DDW-16 Table comparison view for stake pools - adding table styling

* DDW-16 Table comparison view for stake pools - adding table styling

* DDW-16 Table comparison view for stake pools - adding table styling

* DDW-16 Table comparison view for stake pools - adding table styling

* DDW-16 Table comparison view for stake pools - storybook updates

* DDW-16 Table comparison view for stake pools - changelog

* DDW-16 Table comparison view for stake pools - lint fixes

* DDW-16 Table comparison view for stake pools - lint fixes

* DDW-16 Table comparison view for stake pools - updates

* DDW-16 Table comparison view for stake pools - updates

* DDW-16 Table comparison view for stake pools - updates

* DDW-16 Table comparison view for stake pools - fixes

* DDW-16 Table comparison view for stake pools - fixes

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown - changelog

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-373 syncing animation on wallet dropdown

* DDW-16 Table comparison view for stake pools - fixes

* DDW-16 Table comparison view for stake pools - fixes

* DDW-16 Table comparison view for stake pools - fixes

* DDW-16 Table comparison view for stake pools - fixes

* DDW-16 Table comparison view for stake pools - fixes

* DDW-16 Table comparison view for stake pools - fixes

* DDW-373 syncing animation on wallet dropdown - fixes

* DDW-373 Syncing animation on wallet dropdown

* DDW-16 Table comparison view for stake pools - table scroll fixes


--- a/source/renderer/app/components/staking/rewards/StakingRewards.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewards.scss
@@ -1,6 +1,6 @@
 @import '../../../themes/mixins/link';
 .component {
-  padding: 20px;
+  padding: 20px 0 20px 20px;
 
   .headerWrapper {
     display: flex;
@@ -112,7 +112,7 @@
         }
         &.ascending {
           & > svg {
-            transform: rotate(180deg);
+            transform: rotateX(150deg);
           }
         }
         &.sorted {
