--- a/source/renderer/app/components/staking/epochs/StakingEpochs.scss
+++ b/source/renderer/app/components/staking/epochs/StakingEpochs.scss
@@ -8,7 +8,7 @@
 }
 
 .component {
-  padding: 20px;
+  padding: 20px 0 20px 20px;
 
   .headerWrapper {
     align-items: center;
@@ -147,7 +147,7 @@
         }
         &.ascending {
           & > svg {
-            transform: rotate(180deg);
+            transform: rotateX(150deg);
           }
         }
         &.sorted {
