--- a/source/renderer/app/components/staking/layouts/StakingWithNavigation.scss
+++ b/source/renderer/app/components/staking/layouts/StakingWithNavigation.scss
@@ -15,9 +15,14 @@
   display: flex;
   flex-direction: column;
   height: calc(100% - 50px);
-  overflow-y: overlay;
+  overflow-x: hidden;
+  overflow-y: scroll;
   position: relative;
-  scroll-behavior: smooth;
+  &::-webkit-scrollbar-thumb {
+    &:vertical {
+      min-height: 60px !important;
+    }
+  }
 }
 
 .settingsTabPage {
