--- a/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
@@ -2,7 +2,7 @@
 @import '../../../themes/mixins/loading-spinner';
 
 .component {
-  padding: 20px;
+  padding: 20px 0 20px 20px;
 
   .headerWrapper {
     align-items: flex-end;
@@ -167,7 +167,7 @@
         }
         &.ascending {
           & > svg {
-            transform: rotate(180deg);
+            transform: rotateX(150deg);
           }
         }
         &.sorted {
