--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  margin: 0 20px 20px;
+  margin: 0 0 20px 20px;
 
   &.isLoading {
     align-items: center;
@@ -31,5 +31,15 @@
     margin: 20px 0 10px;
     opacity: 0.5;
     padding-left: 20px;
+
+    &.tableHeading {
+      &.tableHeadingFixed {
+        margin-top: 91px;
+      }
+
+      &.tableHeadingFixedPosition {
+        margin-top: 131px;
+      }
+    }
   }
 }
