--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -104,7 +104,7 @@
       padding: 0 20px;
       position: sticky;
       top: 0;
-      z-index: 99;
+      z-index: 1000;
 
       tr {
         border: 0;
@@ -131,6 +131,23 @@
         tr {
           display: flex;
           padding: 0 10px;
+        }
+      }
+
+      :global {
+        .SimpleTooltip_root {
+          .SimpleTooltip_bubble {
+            .SimpleBubble_bubble {
+              font-family: var(--font-regular);
+              font-weight: 400;
+              line-height: 19.04px;
+              text-align: left;
+              text-transform: initial;
+              transform: translate(-50px, 0);
+              white-space: normal;
+              width: 230px;
+            }
+          }
         }
       }
     }
