[DDW-422] Pledge tooltip alignment

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -149,6 +149,15 @@
             }
           }
         }
+        th:nth-child(8) {
+          .SimpleTooltip_root {
+            .SimpleTooltip_bubble {
+              .SimpleBubble_bubble {
+                margin-left: -35px;
+              }
+            }
+          }
+        }
       }
     }
 
