[DDW] Fix Stake pools screen UI/UX issues

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -103,9 +103,9 @@
     :global {
       .SVGInline {
         align-items: center;
-        display: flex;
+        display: flex !important;
         justify-content: center;
-        padding: 0 4px;
+        padding: 0 4px !important;
       }
     }
 
