--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -98,62 +98,43 @@
 
     thead {
       background: var(--theme-bordered-box-background-color);
+      border-radius: 4px 4px 0 0;
       box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.2);
       display: block;
       margin: -20px -20px 0;
       padding: 0 20px;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 999;
 
       tr {
         border: 0;
         display: flex;
         justify-content: space-between;
         width: 100%;
-      }
-    }
 
-    .tableHeader {
-      &.fixedTableHeader {
-        background-color: var(--theme-bordered-box-background-color);
-        border-left: var(--theme-bordered-box-border);
-        border-right: var(--theme-bordered-box-border);
-        box-shadow: 0 10px 10px -10px var(--theme-staking-stake-pool-tooltip-shadow-color);
-        height: 40px;
-        left: 104px;
-        padding: 0 10px;
-        position: fixed;
-        top: 204px;
-        width: calc(100% - 124px);
-        z-index: 99;
-
-        tr {
-          display: flex;
-          padding: 0 10px;
-        }
-      }
-
-      :global {
-        .SimpleTooltip_root {
-          .SimpleTooltip_bubble {
-            .SimpleBubble_bubble {
-              font-family: var(--font-regular);
-              font-weight: 400;
-              line-height: 19.04px;
-              text-align: left;
-              text-transform: initial;
-              transform: translate(-50px, 0);
-              white-space: normal;
-              width: 230px;
-            }
-          }
-        }
-        th:nth-child(8) {
+        :global {
           .SimpleTooltip_root {
             .SimpleTooltip_bubble {
               .SimpleBubble_bubble {
-                margin-left: -35px;
+                font-family: var(--font-regular);
+                font-weight: 400;
+                line-height: 19.04px;
+                text-align: left;
+                text-transform: initial;
+                transform: translate(-50px, 0);
+                white-space: normal;
+                width: 230px;
+              }
+            }
+          }
+
+          th:nth-child(8) {
+            .SimpleTooltip_root {
+              .SimpleTooltip_bubble {
+                .SimpleBubble_bubble {
+                  margin-left: -35px;
+                }
               }
             }
           }
