--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -103,9 +103,9 @@
     :global {
       .SVGInline {
         align-items: center;
-        display: flex;
+        display: flex !important;
         justify-content: center;
-        padding: 0 4px;
+        padding: 0 4px !important;
       }
     }
 
@@ -206,6 +206,10 @@
       border-width: 0 10px 10px 10px;
       left: -10px;
       top: -11px;
+    }
+
+    &.greyArrow {
+      border-bottom-color: var(--theme-staking-stake-pool-grey-color);
     }
   }
 
