--- a/source/renderer/app/components/wallet/layouts/WalletWithNavigation.scss
+++ b/source/renderer/app/components/wallet/layouts/WalletWithNavigation.scss
@@ -3,6 +3,11 @@
   flex: 1;
   flex-direction: column;
   overflow-y: overlay;
+  &.transactions {
+    .page {
+      overflow-y: hidden;
+    }
+  }
 }
 
 .navigation {
