Fix selected pool with no bg color

--- a/source/renderer/app/components/staking/widgets/ThumbSelectedPool.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbSelectedPool.scss
@@ -25,6 +25,7 @@
   }
 
   &.selectedPoolBlock {
+    background: var(--theme-staking-stake-pool-grey-color);
     border-radius: 4px;
     padding-top: 6px;
 
