DDW-418 - Align vertically the "Newsfeed empty" message

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -95,6 +95,13 @@
     overflow: hidden;
     padding: 20px;
 
+    &.emptyFeedContainer {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      height: 100%;
+    }
+
     &::-webkit-scrollbar-track {
       margin: 13px 0;
     }
