[DDW-197] Change send dialog for Flight, improve HW status dialog and spinner

--- a/source/renderer/app/components/hardware-wallet/HardwareWalletStatus.scss
+++ b/source/renderer/app/components/hardware-wallet/HardwareWalletStatus.scss
@@ -46,7 +46,7 @@
   }	
 
   :global {	
-    .LoadingSpinner_component {	
+    .LoadingSpinner_component.hardwareWalletProcessProgress {	
       height: 24px;	
       margin: 0 !important;
       width: 24px;
