--- a/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
+++ b/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
@@ -72,13 +72,13 @@
     height: 22px;
     line-height: 22px;
     padding: 0 24px 0 8px;
+    position: relative;
 
     &:after {
       background-color: var(
         --theme-recovery-phrase-paper-wallet-question-background-color
       );
       border-radius: 50%;
-      color: black;
       color: var(--theme-recovery-phrase-paper-wallet-question-text-color);
       content: '?';
       display: inline-block;
@@ -101,4 +101,8 @@
       }
     }
   }
+}
+
+.paperWalletTooltip {
+  line-height: 22px;
 }
