--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -91,6 +91,9 @@
 
   .newsFeedContainer {
     background: var(--theme-news-feed-background-color);
+    display: flex;
+    flex: 1;
+    flex-direction: column;
     font-family: var(--font-regular);
     overflow: hidden;
     padding: 20px;
@@ -103,6 +106,7 @@
     .newsFeedNoFetchContainer {
       align-items: center;
       display: flex;
+      flex-grow: 1;
       flex-direction: column;
       height: 100%;
       justify-content: center;
@@ -119,6 +123,7 @@
         text-align: center;
       }
     }
+
     .newsFeedList {
       height: calc(100% - 104px);
       overflow-x: hidden;
@@ -126,8 +131,10 @@
       padding: 0 20px 20px 0;
       position: absolute;
       width: calc(100% - 20px);
+
       &.hasUpdate {
         height: calc(100% - 220px);
+        margin-top: 115px;
       }
     }
   }
