--- a/source/renderer/app/components/hardware-wallet/HardwareWalletStatus.scss
+++ b/source/renderer/app/components/hardware-wallet/HardwareWalletStatus.scss
@@ -17,6 +17,11 @@
     font-weight: 300;
     line-height: 1.38;
     padding-right: 20px;
+
+    .externalLink {
+      font-size: 16px;
+      font-family: var(--font-light);
+    }
   }
 
   .checkIcon {
