--- a/source/renderer/app/components/wallet/WalletConnectDialog.scss
+++ b/source/renderer/app/components/wallet/WalletConnectDialog.scss
@@ -53,13 +53,18 @@
     }
 
     .hardwareWalletMessage {
-      color: var(--theme-hardware-wallet-message-color);
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 1.38;
       max-width: 670px;
-      opacity: 0.7;
       padding-top: 30px;
+      p {
+        color: var(--theme-hardware-wallet-message-color);
+        font-family: var(--font-light);
+        font-size: 16px;
+        line-height: 1.38;
+        opacity: 0.7;
+        b {
+          font-family: var(--font-medium);
+        }
+      }
     }
 
     .hardwareWalletStatusWrapper {
