--- a/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
+++ b/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
@@ -1,11 +1,13 @@
 .component {
   align-items: center;
   background: var(--theme-transactions-header-background-color);
+  box-shadow: 0 0px 0 0 rgba(0, 0, 0, 0.25);
   display: flex;
   height: 53px;
   justify-content: space-between;
   padding: 0 40px;
   position: relative;
+  transition: box-shadow 0.25s ease-out;
   z-index: 1;
   &.isScrolling {
     box-shadow: 0 2.5px 10px 0 rgba(0, 0, 0, 0.25);
@@ -16,6 +18,9 @@
       background: #dadfe5 !important;
       padding: 0 12px !important;
       color: #5e6066 !important;
+    }
+    .csvButtonDisabled {
+      opacity: 0.5;
     }
   }
 }
