--- a/source/renderer/app/components/hardware-wallet/HardwareWalletStatus.scss
+++ b/source/renderer/app/components/hardware-wallet/HardwareWalletStatus.scss
@@ -19,19 +19,25 @@
     padding-right: 20px;
 
     .externalLink {
-      font-size: 16px;
       font-family: var(--font-light);
+      font-size: 16px;
     }
   }
 
   .checkIcon {
-    height: 16px;
+    height: 12px;
     margin-right: 5px;
     object-fit: contain;
     width: 16px;
 
-    svg > g > path {
-      stroke-width: 5px;
+    svg {
+      height: inherit;
+      vertical-align: top;
+      width: inherit;
+
+      & > g > path {
+        stroke-width: 5px;
+      }
     }
   }
 
@@ -52,13 +58,14 @@
 
   :global {
     .LoadingSpinner_component.hardwareWalletProcessProgress {
+      flex-shrink: 0;
       height: 24px;
       margin: 0 !important;
       width: 24px;
 
       .LoadingSpinner_icon svg path {
         fill: var(--theme-hardware-wallet-message-color) !important;
-        opacity: 0.5;
+        opacity: 0.3;
       }
     }
   }
