[DDW-385] Styling adjustment

--- a/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
+++ b/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
@@ -5,6 +5,7 @@
   display: flex;
   height: 53px;
   justify-content: space-between;
+  margin-top: -53px;
   padding: 0 40px;
   position: relative;
   transition: box-shadow 0.25s ease-out;
