Refactor voting registration container to dialog Add new confirmation step Add getWalletKey request for stake_key Add createWalletSignature request for get signature key Update metadata for voting registration transaction

--- a/source/renderer/app/components/voting/info/VotingInfo.scss
+++ b/source/renderer/app/components/voting/info/VotingInfo.scss
@@ -3,6 +3,11 @@
 .component {
   padding: 20px;
   text-align: center;
+  :global {
+    button.SimpleButton_root {
+      width: 415px;
+    }
+  }
 }
 
 .heading {
