--- a/source/renderer/app/components/voting/voting-add-wizard/VotingAddStepsQrCode.scss
+++ b/source/renderer/app/components/voting/voting-add-wizard/VotingAddStepsQrCode.scss
@@ -1,11 +1,4 @@
 .votingAddStepsQrCodeWrapper {
-  :global {
-    .LoadingSpinner_component {
-      height: 66px;
-      width: 66px;
-    }
-  }
-
   .content {
     .qrCode {
       display: flex;
@@ -20,27 +13,43 @@
 
     .qrCodeDescription {
       display: flex;
-      flex-direction: column;
-      margin-bottom: 15px;
-      margin-top: 25px;
-      text-align: center;
-      p:last-child {
-        color: var(--theme-voting-steps-description-color);
+      justify-content: center;
+      margin-bottom: 25px;
+      margin-top: 40px;
+      .qrCodeMessageIcon {
+        width: 72px;
+        height: 72px;
+        svg {
+          path {
+            stroke: var(--theme-voting-info-icon-color);
+          }
+        }
+      }
+      .qrCodeMessageText {
+        display: flex;
+        text-align: left;
+        justify-content: flex-end;
+        margin-left: 10px;
+        flex-direction: column;
+        p:last-child {
+          color: var(--theme-voting-steps-description-color);
+        }
       }
     }
 
-    .qrCodeConfirm {
+    .messages {
       display: flex;
-      margin-top: 15px;
-      text-align: center;
-    }
-
-    .loadinBlockWrapper {
-      margin-bottom: 20px;
-      margin-top: 20px;
-      text-align: center;
+      flex-direction: column;
+      margin-bottom: 15px;
+      margin-top: 25px;
       p {
-        color: var(--theme-voting-steps-description-color);
+        margin-top: 20px;
+      }
+      p.secondaryWarning {
+        font-weight: bold;
+      }
+      p.primaryWarning {
+        color: var(--theme-voting-steps-warning-messages-font-color);
       }
     }
 
