--- a/source/renderer/app/components/voting/VotingAddDialog.scss
+++ b/source/renderer/app/components/voting/VotingAddDialog.scss
@@ -1,6 +1,11 @@
 @import './votingConfig';
 
 .component {
+  :global {
+    .Dialog_title {
+      margin-bottom: 0;
+    }
+  }
   overflow-y: overlay;
   padding: 20px;
   text-align: center;
@@ -21,7 +26,7 @@
 
   .votingAddStepsIndicatorWrapper {
     margin: auto;
-    width: 288px;
+    width: 450px;
 
     .stepIndicatorLabel {
       color: var(--theme-voting-steps-activation-steps-indicator-color);
