[DDW-385] Fix Tx header button icon

--- a/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
+++ b/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
@@ -17,6 +17,9 @@
     margin-right: 9px;
     .csvButton {
       padding: 0 12px !important;
+      svg g {
+        fill: var(--theme-button-flat-text-color);
+      }
     }
     .csvButtonDisabled {
       opacity: 0.5;
