--- a/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
@@ -19,6 +19,7 @@
 
     & > .actionButton {
       box-shadow: 0 1.5px 5px 0 var(--theme-staking-export-button-shadow-color);
+      border-radius: 2px;
       display: flex;
       height: auto;
       padding: 7px 12px;
