--- a/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
+++ b/source/renderer/app/components/wallet/transactions/WalletTransactionsHeader.scss
@@ -1,7 +1,7 @@
 .component {
   align-items: center;
   background: var(--theme-transactions-header-background-color);
-  box-shadow: 0 0px 0 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.25);
   display: flex;
   height: 53px;
   justify-content: space-between;
