[DDW-385] Filter and export transactions to a CSV file (#2207)
* [DDW-385] Init

* [DDW-385] CHANGELOG

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] Progress - header

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] UI progress

* [DDW-385] Make rewardsCsvExport generic

* [DDW-385] Implement CSV request - progress

* [DDW-385] Transactions CSV working

* [DDW-385] Filtering progress

* [DDW-385] Filtering - progress

* [DDW-385] Filtering working

* [DDW-385] Disable CSV when no tx

* CSV Generator helper

* [DDW-385] Localized CSV generator

* [DDW-385] Japanese translation

* [DDW-385] Readd re-add dummy data

* [DDW-385] Styling adjustment

* [DDW-385] Small fix

* [DDW-385] Locale and User pref formatting

* [DDW-385] Dummy data

* [DDW-385] Add currentNumberFormat to TinyInput

* [DDW-385] Remove unecessary element styling

* [DDW-385] Storybook story for Transactions with header

* [DDW-385] Remove dummy data

* [DDW-385] Translation manager

* [DDW-385] Remove Flow and Lint errors

* [DDW-385] Disabled files when wallet is restoring

* [DDW-385] Fix CSV with missing From Address

* [DDW-385] Fix Tx header button styles

* [DDW-385] Fix Tx header button icon

* [DDW-385] Remove dash for unresolved addresses

* [DDW-385] Runs prettier

* [DDW-385] Update flowconfig

* [DDW-385] Runs stylelint

* [DDW-385] Transactions CSV download notification

* [DDW-385] Lint errors

* [DDW-385] CSV download notification JP

* [DDW-385] Rewards CSV notification - progress

* [DDW-385] Rewards CSV notification - finished

* [DDW-385] Transactions CSV adjustments

* [DDW-385] Rewards CSV dates in UTC

* [DDW-385] Adjustments

* [DDW-385] Localizable rewards CSV filename

* [DDW-385] Correct CSS rules order

* [DDW-385] JP values for Sent & Received

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
@@ -18,6 +18,7 @@
     }
 
     & > .actionButton {
+      border-radius: 2px;
       box-shadow: 0 1.5px 5px 0 var(--theme-staking-export-button-shadow-color);
       display: flex;
       height: auto;
