--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -134,7 +134,16 @@
 
       &.hasUpdate {
         height: calc(100% - 220px);
-        margin-top: 95px;
+        margin-top: 100px;
+      }
+    }
+
+    .updateItem {
+      margin: -20px;
+      padding: 20px 20px 15px;
+
+      &.hasShadow {
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       }
     }
   }
