--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -39,10 +39,9 @@
         }
       }
 
-      :global
-        .ChangeSpendingPasswordDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+      .tooltip {
         height: 12px;
-        left: 136px;
+        left: 142px;
         position: absolute;
         top: 54px;
         width: 12px;
@@ -76,7 +75,6 @@
 
       .infoIcon {
         height: 14px;
-        margin-left: 6px;
         opacity: 0.4;
         transform: translateY(2px);
         width: 14px;
