--- a/source/renderer/app/components/wallet/WalletRestoreDialog.scss
+++ b/source/renderer/app/components/wallet/WalletRestoreDialog.scss
@@ -83,14 +83,6 @@
           }
         }
 
-        :global
-          .WalletCreateDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
-          height: 12px;
-          left: -153px;
-          top: 2px;
-          width: 12px;
-        }
-
         :global .InlineEditingDropdown-tooltip_bubble {
           border-radius: 10px;
           height: 87px;
@@ -108,9 +100,16 @@
           }
         }
 
+        .tooltip {
+          height: 12px;
+          left: -147px;
+          position: relative;
+          top: 2px;
+          width: 12px;
+        }
+
         .infoIcon {
           height: 14px;
-          margin-left: 6px;
           opacity: 0.4;
           transform: translateY(2px);
           width: 14px;
