DDW-431 - Newsfeed shadow fixes

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -98,6 +98,10 @@
     overflow: hidden;
     padding: 20px;
 
+    &.noUpdateItem {
+      padding: 0 20px;
+    }
+
     &::-webkit-scrollbar-track {
       margin: 13px 0;
     }
