DDW-430 - Smart tooltips fixes

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -310,6 +310,7 @@
 
     .hoverContent {
       height: 36px;
+      margin-left: 0;
       opacity: 1;
       transition: opacity 0s, height 0.25s;
       transition-delay: 0.25s;
