--- a/source/renderer/app/components/staking/widgets/TooltipPool-copyId-tooltip.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool-copyId-tooltip.scss
@@ -1,19 +1,17 @@
 .root {
-  .bubble {
-    margin-left: 77px;
-    top: -8px;
-    transition: opacity 0.25s;
-    transition-delay: 0s;
-    span[data-bubble-arrow='true'] {
-      &:before,
-      &:after {
-        margin-left: 45px;
-      }
+  margin-left: 230px;
+  top: 0;
+  transition: opacity 0.25s;
+  transition-delay: 0s;
+
+  .tippy-arrow {
+    &:before,
+    &:after {
+      margin-left: 45px;
     }
   }
+
   &:hover {
-    .bubble {
-      transition-delay: 0.25s;
-    }
+    transition-delay: 0.25s;
   }
 }
