--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -32,7 +32,7 @@
     z-index: 1;
 
     &.hasShadow {
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      box-shadow: var(--theme-news-feed-header-box-shadow-color);
     }
 
     .newsFeedTitle {
@@ -147,7 +147,7 @@
       padding: 20px 20px 15px;
 
       &.hasShadow {
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--theme-news-feed-header-box-shadow-color);
       }
     }
   }
